second section added

--- a/style.css
+++ b/style.css
@@ -38,5 +38,28 @@ ul li a{
         margin-bottom: 50px;
        margin-left:150px;
        margin-right: 150px;
+    }
+    /* second section start */
+    .second-section{
+        display:flex;
+        align-items: center;
+    }
+    .team-img{
+        margin-top: 30px;
+        margin-left: 40px;
+        
 
+    }
+    .img-1{
+        margin-bottom: 20px;
+    }
+    .img-2{
+        margin-left: 20px;
+        margin-bottom: 20px;
+    }
+    .img-4{
+        margin-left: 20px;
+    }
+    .second-banner-text{
+        margin-left: 50px;
     }
