--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 .first-section{
+    justify-content: center;
     background-color: #f6e0c6;
 }
 .heading{
@@ -34,21 +35,22 @@ ul li a{
     margin-top: 25px;
 }
     .img-banner{
+        justify-content: center;
         margin-top: 50px;
         margin-bottom: 50px;
-       margin-left:150px;
-       margin-right: 150px;
+       
     }
     /* second section start */
     .second-section{
+        margin-bottom: 20px;
+        justify-content: center;
+        position: relative;
         display:flex;
         align-items: center;
     }
     .team-img{
         margin-top: 30px;
         margin-left: 40px;
-        
-
     }
     .img-1{
         margin-bottom: 20px;
@@ -68,4 +70,68 @@ ul li a{
     }
     .second-banner-title2{
         color: #FF900E;
+    }
+    /* thrid section */
+    .third-section{
+        margin-bottom: 20px;
+        justify-content: center;
+        display: flex;
+    }
+    .third-sec-title{
+        margin-left: 50px;
+        
+    }
+    .border-line{
+        border-left: 5px solid #F15B22 ;
+        padding-left: 10px;
+    }
+    .feature-1{
+        background-color: #f6f1f1f9;
+        width: 470px;
+        margin-left: 50px;
+        padding: 10px 20px;
+        margin-bottom: 15px;
+    }
+    .feature-2{
+        background-color: #f6f1f1f9;
+        width: 470px;
+        margin-left: 50px;
+        padding: 10px 20px;
+        margin-bottom: 15px;
+    }
+    .feature-3{
+        background-color: #f6f1f1f9;
+        width: 470px;
+        margin-left: 50px;
+        padding: 10px 20px;
+        margin-bottom: 15px;
+    }
+    .feature-4{
+        background-color: #f6f1f1f9;
+        width: 470px;
+        margin-left: 50px;
+        padding: 10px 20px;
+        margin-bottom: 15px;
+    }
+    .architect-img{
+        position: relative;
+    }
+    .architect-1{
+        margin-left: 15px;
+        height: 880px;
+
+    }
+    .btn-third-section{
+        position: absolute;
+        bottom: 13px;
+        left: 16px;
+        background-color: #F15B22;
+        color: #FFFFFF;
+        font-weight: 700;
+        font-size: 20px;
+        border: 0;
+        padding-bottom: 16px;
+        padding-top: 16px;
+        height: 70px;
+        border-radius: 5px;
     }
