--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0 auto;
 }
-.first-section{
-    justify-content: center;
+.container{
     background-color: #f6e0c6;
 }
 .heading{
@@ -34,13 +34,11 @@ ul li a{
     padding: 14px 29px;
     height: 64px;
     border-radius: 5px;
-    margin-top: 25px;
+    margin: 30px 25px;
 }
     .img-banner{
-        justify-content: center;
-        margin-top: 50px;
-        margin-bottom: 50px;
-       
+        width: 1400px;
+        margin-bottom: 30px;
     }
     /* second section start */
     .second-section{
